commit for customer details model

--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -14,7 +14,11 @@
 
 <link rel="stylesheet" href="css/ajax-loader.css">
 <link rel="stylesheet" href="css/bootstrap.min.css">
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"> -->
+
 <link rel="stylesheet" href="css/jquery-ui.css">
+
+<!-- <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css"> -->
 <link rel="stylesheet" href="css/jquery.edittable.css">
 <link rel="stylesheet" href="css/style.css">
 <link rel="icon" type="image/png" href="images/mit_logo_new.png" />
@@ -23,9 +27,13 @@
 
 <!--jquery  -->
 		
-	<script type="text/javascript" src="js/jquery/jquery-1.10.1.min.js"></script>
+<!-- 	<script type="text/javascript" src="js/jquery/jquery-1.10.1.min.js"></script> -->
+	
+	<!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
 	<script src="js/jquery/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	
+	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script> -->
 	<!--end of jquery  -->
 	               
        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
