--- a/MitosisTimesheet/src/main/webapp/html/timesheet.html
+++ b/MitosisTimesheet/src/main/webapp/html/timesheet.html
@@ -56,28 +56,28 @@
 	<tbody>
 		<tr ng-repeat="sheet in filteredParticipantsResults track by $index">
 			<td>
-				<span ng-show="!showEdit">{{sheet.entryDate}}</span>
+				<span ng-click="copyCurrentEntry(sheet)" ng-show="!showEdit">{{sheet.entryDate}}</span>
 				<span ng-show="showEdit"><input class="form-control" ui-date="dateOptions" ui-date-format="dd-mm-yy" type="text" ng-model="sheet.entryDate"></span>
 				<span style="color:red" ng-show="sheet.entryDate == '' || sheet.entryDate == undefined">Required</span>
 			</td>
 			<td>
-				<span ng-show="!showEdit">{{sheet.project.projectName}}</span>
+				<span ng-click="copyCurrentEntry(sheet)" ng-show="!showEdit">{{sheet.project.projectName}}</span>
 				<span id="{{sheet.project.id}}" ng-show="showEdit"><select class="form-control" ng-model="sheet.project" ng-options="item as item.projectName for item in projectList" style="color: #777777;">
 				<option value="">{{sheet.project.projectName}}</option>
 				</select> 
 				</span>
 			</td>
 			<td>
-				<span ng-show="!showEdit">{{sheet.hours}}</span>
+				<span ng-click="copyCurrentEntry(sheet)" ng-show="!showEdit">{{sheet.hours}}</span>
 				<span id="{{sheet.id}}" ng-show="showEdit"><input class="form-control" id="{{sheet.id}}" type="text" onkeypress="return isNumber(event)" ng-model="sheet.hours"></span>
 				<span style="color:red" ng-show="sheet.hours == '' || sheet.hours == undefined">Required</span>
 			</td>
 			<td>
-				<span ng-show="!showEdit">{{sheet.issueNumber}}</span>
+				<span ng-click="copyCurrentEntry(sheet)" ng-show="!showEdit">{{sheet.issueNumber}}</span>
 				<span ng-show="showEdit"><input class="form-control" type="text" ng-model="sheet.issueNumber"></span>
 			</td>
 			<td >
-				<span ng-show="!showEdit">{{sheet.description}}</span>
+				<span ng-click="copyCurrentEntry(sheet)" ng-show="!showEdit">{{sheet.description}}</span>
 				<span ng-show="showEdit"><textarea rows="1" class="form-control" type="text" ng-model="sheet.description"></textarea></span>
 				<span style="color:red" ng-show="sheet.description == '' || sheet.description == undefined">Required</span>
 			</td>
