--- a/MitosisTimesheet/src/main/webapp/html/leavereport.html
+++ b/MitosisTimesheet/src/main/webapp/html/leavereport.html
@@ -18,15 +18,14 @@
 	</div>
 	</div>
 	<div class="row" style="margin-top: 3%;">
-	<!-- <div class="col-xs-4 col-sm-4 col-lg-3 col-md-3">
+	<div class="col-xs-4 col-sm-4 col-lg-3 col-md-3">
 	<button type="submit" class="btn btn-primary btn-sm" ng-click="leaveSummaryReport()" style="width: 135px; font-size: 15px;">Summary</button>
-	</div> -->
+	</div>
 	<div class="col-xs-4 col-sm-4 col-lg-3 col-md-3">
 	<button type="submit" name="genertereport" class="btn btn-primary btn-sm" ng-click="leavereport()" style="width: 135px; font-size: 15px;">Detail</button>
 	</div>
 	</div>
 	</form>
-	
    
 </div>
 
