commit for bank reconcile changes

--- a/MitosisTimesheet/src/main/webapp/html/bank_reconcile.html
+++ b/MitosisTimesheet/src/main/webapp/html/bank_reconcile.html
@@ -143,13 +143,13 @@
 			<th>Project</th>
 			<th>Invoice No</th>
 			<th>Invoice Date</th>
-			<th>Invoice Amt($)</th>			
+			<th>Invoice Amt</th>			
 			<th>Recpt No</th>
-			<th>Recpt Amt($)</th>
-			<th>Recvd Date</th>
-			<th>Recvd Amt($)</th>
+			<th>Recpt Amt</th>
+			<th style="width: 140px;">Bank Recvd Date</th>
+			<th style="width: 140px;">Bank Recvd Amt</th>
 			<th>Exg Rate</th>
-			<th>commision($)</th>
+			<th style="width: 140px;">Bank commision</th>
 			<th>Amt(INR)</th>
 			<th></th>
 		</tr>
