--- a/MitosisTimesheet/src/main/webapp/html/timesheet.html
+++ b/MitosisTimesheet/src/main/webapp/html/timesheet.html
@@ -13,8 +13,8 @@
        <input type="text" required class="form-control" ui-date="dateOptions" ui-date-format="dd-mm-yy" ng-model="timesheet.date">
     </div>
        
-    <div class="form-group">
-    <select  class="form-control" required ng-model="projects" ng-options="item as item.projectName for item in projectList" style="color: #777777;">
+    <div class="form-group"> 
+    <select  class="form-control" required ng-model="projects" ng-options="item.projectId as item.projectName for item in projectList" style="color: #777777;">
     <option value="">Project</option>
     </select> 
     </div>
@@ -62,7 +62,7 @@
 			</td>
 			<td>
 				<span ng-click="copyCurrentEntry(sheet)" ng-show="!showEdit">{{sheet.project.projectName}}</span>
-				<span id="{{sheet.project.id}}" ng-show="showEdit"><select class="form-control" ng-model="sheet.project" ng-options="item as item.projectName for item in projectList" style="color: #777777;">
+				<span id="{{sheet.project.id}}" ng-show="showEdit"><select class="form-control" ng-model="sheet.project" ng-options="item.projectId as item.projectName for item in projectList" style="color: #777777;">
 				<option value="">{{sheet.project.projectName}}</option>
 				</select> 
 				</span>
