--- a/MitosisTimesheet/src/main/webapp/html/include.html
+++ b/MitosisTimesheet/src/main/webapp/html/include.html
@@ -35,6 +35,7 @@
             <li><a ui-sref="invoice">Invoice</a></li>
           <li><a ui-sref="customer_payment">Receipt</a></li>
           <li><a ui-sref="bankReconcile">Bank Reconcile</a></li> 
+          <li><a ui-sref="financeReport">Report</a></li>
        	  <li><a ng-click="pendingInvoice()">Pending Invoice generation </a></li>
           <li><a ng-click="pendingBalance()">Pending Balance From Customers</a></li>
           </ul>
