--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -80,6 +80,7 @@
     <script src="js/controllers/projectCostDetailsController.js"></script>
     <script src="js/controllers/customerpaymentController.js"></script>
     <script src="js/controllers/bankReconcileController.js"></script>
+     <script src="js/controllers/financeReportController.js"></script>
      <script src="js/controllers/includeController.js"></script>
     	
 </head>
