--- a/MitosisTimesheet/src/main/webapp/html/timesheet.html
+++ b/MitosisTimesheet/src/main/webapp/html/timesheet.html
@@ -25,9 +25,9 @@
        <input type="text" class="form-control" ng-model="timesheet.issueNumber" placeholder="Issue#">
     </div>
     <div class="form-group">
-      <textarea rows="1" required class="form-control" ng-model="timesheet.description" placeholder="Description"></textarea>
+      <textarea rows="2" cols="30" required class="form-control" ng-model="timesheet.description" placeholder="Description"></textarea>
     </div>
-    <div class="form-group btn-formproject">
+    <div class="form-group btn-formproject" style="padding-top: 10px;">
     <button type="submit" class="btn btn-primary">Add</button>
 	<button type="reset" style="margin-left: 8px;"  class="btn btn-primary">Clear</button>
 	</div> 
