commit for invoice issues

--- a/MitosisTimesheet/src/main/webapp/html/company_info.html
+++ b/MitosisTimesheet/src/main/webapp/html/company_info.html
@@ -102,13 +102,13 @@
         <input class="form-control edit-profile" type="text" required ng-model="comp.ifscCode">
       </div>
     </div>
-    <div class="form-group">
+   <!--  <div class="form-group">
       <label class="control-label col-sm-3 textleft">MICR Code<span>:</span></label>
       <div class="col-sm-9 profile-value">  
         <span class="span-profile"> {{comp.micrCode}}</span>        
         <input class="form-control edit-profile" type="text" required ng-model="comp.micrCode">
       </div>
-    </div>
+    </div> -->
     <div class="form-group">
       <label class="control-label col-sm-3 textleft">Swift Code<span>:</span></label>
       <div class="col-sm-9 profile-value">  
