--- a/MitosisTimesheet/src/main/webapp/html/project_invoice.html
+++ b/MitosisTimesheet/src/main/webapp/html/project_invoice.html
@@ -43,7 +43,7 @@
     <div class="form-group">
       <label class="control-label col-sm-4 textleft">Invoice No<span>:</span></label>
       <div class="col-sm-8">          
-        <input type="text" class="form-control" readonly ng-model="invoice.invoiceno"/>
+        <input type="text" class="form-control" readonly ng-model="invoice.invoiceno" required style="color: #777777;"/>
       </div>
     </div>
     <div class="form-group">
@@ -86,7 +86,7 @@
     </div>
     <div class="form-group">
  
-       <input class="form-control" ng-model="member.amount" onkeypress="return isNumber(event)" placeholder="Amount">
+       <input class="form-control" readonly  ng-model="member.amount" onkeypress="return isNumber(event)" placeholder="Amount">
     </div>
     
     <div class="form-group">        
