--- a/MitosisTimesheet/src/main/webapp/html/projectCost.html
+++ b/MitosisTimesheet/src/main/webapp/html/projectCost.html
@@ -36,7 +36,7 @@ $(document).ready(function () {
     <div class="form-group">
     <label class="control-label col-sm-4 textleft">Type<span>:</span></label>
     <div class="col-sm-8">
-    <select class="form-control" name="select-type" required ng-model="cost.projectType" style="color: #777777;">
+    <select class="form-control" name="select-type" required ng-model="cost.projectType"  ng-change="costTypeChange(project)" style="color: #777777;">
     <option value="">Project Type</option>
     <option value="Fixed">Fixed</option>
 	<option value="Hourly">Hourly</option>
@@ -57,7 +57,7 @@ $(document).ready(function () {
 	</div>
 	
 	<div class="col-md-6 col-xs-12" >   	
-   	<div class="form-group">
+   	<div class="form-group" ng-show=costshow>
       <label class="control-label col-sm-4 textleft">Cost<span>:</span></label>
       <div class="col-sm-8">
         <input class="form-control" type="text" id="costdet" onkeypress="return isNumber(event)" placeholder="" ng-model="cost.projectCost">
@@ -71,7 +71,7 @@ $(document).ready(function () {
 		</div>
     </div> 
     
-    <div class="form-group" id="hr-show">
+    <div class="form-group" id="hr-show" ng-show=rateshow>
     <label class="control-label col-sm-4 textleft">Rate<span>:</span></label>
 	    <div class="col-sm-8">
 	    <input class="form-control" id="rate" type="text" onkeypress="return isNumber(event)"  ng-model="cost.costOfEmp">
