--- a/MitosisTimesheet/src/main/webapp/html/company_info.html
+++ b/MitosisTimesheet/src/main/webapp/html/company_info.html
@@ -51,14 +51,14 @@
         <input class="form-control edit-profile" type="text" ng-model="comp.taxId">
       </div>
     </div>
-    <div class="form-group">
+   <!--  <div class="form-group">
       <label class="control-label col-sm-3 textleft">Logo<span>:</span></label>
       <div class="col-sm-9 profile-value">  
         <span class="span-profile-img"><img id="img2" style="width: 180px;height: 80px;"  ng-src={{comp.logo}}></img> </span>        
         <input class="form-control edit-profile-img" style="display: none;" id="img1" type="file" ng-model="comp.logo" onchange="angular.element(this).scope().handleFileSelect(this)"">
         
       </div>
-    </div>
+    </div> -->
     <h4 style="text-decoration: underline;">Account Details:</h4>
     <div class="form-group">
       <label class="control-label col-sm-3 textleft">Account Number<span>:</span></label>
