--- a/MitosisTimesheet/src/main/webapp/html/project_invoice.html
+++ b/MitosisTimesheet/src/main/webapp/html/project_invoice.html
@@ -49,7 +49,7 @@
     <div class="form-group">
       <label class="control-label col-sm-4 textleft">Invoice Amount<span>:</span></label>
       <div class="col-sm-8">          
-        <input type="text" class="form-control" ng-model="invoice.invoiceamt"  onkeypress="return isNumber(event)" id="" placeholder=""  required  >
+        <input type="text" class="form-control" ng-model="invoice.invoiceamt"  onkeypress="return isNumber(event)" id="" placeholder="" required  >
       </div>
     </div>
     <div class="form-group">
@@ -74,7 +74,7 @@
     </div>
     <div class="form-group">
 
-       <select  class="form-control" style="color: #777777;" ng-model="member.teamlist" ng-options="item as item.member.name for item in invoice.teammembers" ng-change="calculateRate(member.teamlist,invoice.projectlist)" style="color: #777777;">
+       <select  class="form-control" style="color: #777777;" ng-model="member.teamlist" ng-options="item as item.member.name for item in invoice.teammembers" ng-change="calculateRateForInsert(member.teamlist,invoice.projectlist)" style="color: #777777;">
 	    <option value="" ng-selected="true">Team Members</option>
 		</select>
     </div>
@@ -134,7 +134,7 @@
 			</td>
 			<td>
 				<span ng-show="!showEdit">{{sheet.teammember}}</span>
-				<span id="{{sheet.employee.id}}" ng-show="showEdit"><select class="form-control" ng-model="sheet.teammember" ng-options="item.member.name as item.member.name for item in invoice.teammembers" style="color: #777777;">
+				<span id="{{sheet.employee.id}}" ng-show="showEdit"><select class="form-control" ng-model="sheet.teammember" ng-change="calculateRateForUpdate(invoice.projectlist,sheet)" ng-options="item.member.name as item.member.name for item in invoice.teammembers" style="color: #777777;">
 				<option value="">Team Members</option>
 				</select> 
 				</span>
