--- a/MitosisTimesheet/src/main/webapp/html/project_invoice.html
+++ b/MitosisTimesheet/src/main/webapp/html/project_invoice.html
@@ -151,8 +151,8 @@
 			</td>
 			<td>
 				<span ng-show="!showEdit">{{sheet.amount}}</span>
-				<span id="{{sheet.id}}" ng-show="showEdit"><input class="form-control" id="{{sheet.id}}" type="text" onkeypress="return isNumber(event)" ng-model="sheet.amount"></span>
-				<!-- <span style="color:red" ng-show="sheet.amount == '' || sheet.amount == undefined">Required</span> -->
+				<span id="{{sheet.id}}" ng-show="showEdit"><input class="form-control" id="{{sheet.id}}" type="text" onkeypress="return isNumber(event)" ng-model="sheet.amount" ng-change="sumCost();"></span>
+			  <!--  <span style="color:red" ng-show="sheet.amount == '' || sheet.amount == undefined">Required</span>  -->
 			</td>
 			
 			<td style="word-spacing: 15px;">
