--- a/MitosisTimesheet/src/main/webapp/html/project_invoice.html
+++ b/MitosisTimesheet/src/main/webapp/html/project_invoice.html
@@ -49,7 +49,7 @@
     <div class="form-group">
       <label class="control-label col-sm-4 textleft">Invoice Amount<span>:</span></label>
       <div class="col-sm-8">          
-        <input type="text" class="form-control" ng-model="invoice.invoiceamt"  onkeypress="return isNumber(event)" id="" placeholder="" required  >
+        <input type="text" id="invoiceamt" class="form-control" ng-model="invoice.invoiceamt"  onkeypress="return isNumber(event)" id="" placeholder="" required  >
       </div>
     </div>
     <div class="form-group">
