commit for project view issues

--- a/MitosisTimesheet/src/main/webapp/html/projectCostView.html
+++ b/MitosisTimesheet/src/main/webapp/html/projectCostView.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 5%;"><div class="row"><div class="col-xs-12 col-md-12">
+<div ng-init="list();" class="container" style="margin-top: 5%;"><div class="row"><div class="col-xs-12 col-md-12">
 <h2 class="text-center">Total Project Cost Details</h2></div></div></div>
 
 <div class="container" style="width: 100%;">
