--- a/MitosisTimesheet/src/main/webapp/html/projectCost.html
+++ b/MitosisTimesheet/src/main/webapp/html/projectCost.html
@@ -128,6 +128,7 @@ $(document).ready(function () {
 </table>
 <div class="text-center" style="margin-top: 25px;">
 <button type="submit" id="addDet" class="btn btn-primary" ng-click="addProjectCostDetails()">Submit</button>
+<button id="viewDet" class="btn btn-primary" ui-sref="projectCostView">View</button>
 </div>
  <div class="alert-msg col-xs-12 col-sm-6"><p class="alert-success"></p></div>
  <div class="alert-msg1 col-xs-12 col-sm-6"><p class="alert-danger"></p></div>
