--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -82,6 +82,7 @@
     <script src="js/controllers/bankReconcileController.js"></script>
      <script src="js/controllers/financeReportController.js"></script>
      <script src="js/controllers/includeController.js"></script>
+     <script src="js/controllers/projectCostViewController.js"></script>
     	
 </head>
 <body ng-app="myApp" style="background: #f2f2f2;">
