commit for project cost

--- a/MitosisTimesheet/src/main/webapp/html/employeeMaster.html
+++ b/MitosisTimesheet/src/main/webapp/html/employeeMaster.html
@@ -1,3 +1,13 @@
+<script>
+
+$('.btn-ok').click(function(){
+	$('.emp-det-show').fadeOut(200);
+	$('.overlay').fadeOut(200);
+})
+
+</script>
+
+
 <div ng-init="list()">
 	<div class="container" style="margin-top: 8%;">
 		<div class="row">
