commit for invoice report issue

--- a/MitosisTimesheet/src/main/webapp/html/projectCostView.html
+++ b/MitosisTimesheet/src/main/webapp/html/projectCostView.html
@@ -9,7 +9,7 @@ $('.btn-ok').click(function(){
 
 
 <div ng-init="list();" class="container" style="margin-top: 5%;"><div class="row"><div class="col-xs-12 col-md-12">
-<h2 class="text-center">All Project Cost Details</h2></div></div></div>
+<h2 class="text-center">View Project Cost Details</h2></div></div></div>
 
 <div class="container" style="width: 100%;">
  <div class="row len_show" style="padding: 20px;">
