commit for reports centralized js

--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -53,6 +53,7 @@
 	<script type="text/javascript" src="js/spin.min.js"></script>
     <script src="js/dialogs.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/angular/ui-bootstrap-tpls.min.js"></script> 
+	<script src="js/projectUrl.js"></script>
     <!-- 	<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.6.0.js" type="text/javascript"></script>   -->
 	<!-- end of angularjs  -->
 	
