--- a/MitosisTimesheet/src/main/webapp/html/include.html
+++ b/MitosisTimesheet/src/main/webapp/html/include.html
@@ -48,6 +48,7 @@
           <li ng-show="manageEmployees" ng-class="{ active: isActive('/HR')}"><a class="dropdown-toggle" data-toggle="dropdown"> HR<span class="caret"></span></a>
         <ul class="dropdown-menu">
             <li><a ui-sref="employeeMaster">Employee Master</a></li>
+             <li><a ui-sref="lobMaster">Lob Master</a></li>
             </ul>
             </li>
          <li ng-show="recpt" ng-class="{ active: isActive('/reports')}"><a class="dropdown-toggle" data-toggle="dropdown"> Reports<span class="caret"></span></a>
