--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -84,6 +84,7 @@
      <script src="js/controllers/financeReportController.js"></script>
      <script src="js/controllers/includeController.js"></script>
      <script src="js/controllers/projectCostViewController.js"></script>
+     <script src="js/controllers/lobMasterController.js"></script>
     	
 </head>
 <body ng-app="myApp" style="background: #f2f2f2;">
