--- a/MitosisTimesheet/src/main/webapp/html/lobMaster.html
+++ b/MitosisTimesheet/src/main/webapp/html/lobMaster.html
@@ -1,5 +1,5 @@
 <div ng-init="list()">
-<div class="container" style="margin-top: 8%;"><div class="row"><div class="col-xs-12 col-md-12"><h2 class="text-center">lob Master</h2></div></div></div>
+<div class="container" style="margin-top: 8%;"><div class="row"><div class="col-xs-12 col-md-12"><h2 class="text-center">LOB Master</h2></div></div></div>
 <div class="container" style="width: 100%;">
 <div class="teamassgn-form-div">
 <form class="form-inline project-form" role="form" id="addEntry" ng-submit="insert()">		
@@ -43,6 +43,7 @@
 		<tr>
 			<th class="">Lob Name</th>
 			<th class="">Skills</th>
+			 <th></th>
 		</tr>
 	</thead>
 	<tbody>
