--- a/MitosisTimesheet/src/main/webapp/html/bank_reconcile.html
+++ b/MitosisTimesheet/src/main/webapp/html/bank_reconcile.html
@@ -1,9 +1,9 @@
 
-<div ng-init="list()">
-<div class="container" style="margin-top: 6%;"><div class="row"><div class="col-xs-12 col-md-12"><h2 class="text-center">Bank Reconcile Details</h2></div></div></div>
+<div ng-init="getReceiptDetails()">
+<div class="container" style="margin-top: 6%;"><div class="row"><div class="col-xs-12 col-md-12"><h2 class="text-center">Pending Bank Reconcile List</h2></div></div></div>
 
 
-<form class="" role="form" ng-submit="insertPaymentInfo()">
+<form class="" role="form" ng-submit="insertPaymentInfo()" ng-hide="true">
 <div class="container" style="width: 100%;">
 	<div class="form-invoice form-horizontal">
 	<div class="row">
@@ -98,7 +98,7 @@
     </div>
     </div>
      <div class="col-xs-12">
-    <h4 class="text-center">Bank Received Information</h4>
+    <h4 class="text-center">Pending Bank Reconcile List</h4>
     
     <div class="container" style="width: 100%;">
 	<div class="pay-form-div form-inline" style="word-spacing: 10px;">    
@@ -135,6 +135,20 @@
 </div>
 </form>
 
+<div class="row">
+<div class="col-sm-6 len_show" style="padding: 20px;">
+<span>Show
+<select ng-model="numPerPage" >
+<option>15</option>
+<option>25</option>
+<option>35</option>
+<option>50</option>
+</select> Entries</span></div>
+<div class="col-sm-6 search-tab"> 
+	       <input type="text" id="search" required class="form-control" ng-change="filter()" ng-model="search" placeholder="Search"></input>
+</div>
+</div>
+
 <div class="container" style="width: 100%;">
 <div class="table-responsive">
 <table class="table">
@@ -155,12 +169,11 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr ng-repeat="sheet in filteredParticipantsResults">
+		<tr ng-repeat="sheet in filteredParticipantsResults| filter:search">
 			<td>
 				<span ng-show="!showEdit">{{sheet.invoiceHdr.project.projectName}}</span>
 				<span ng-show="showEdit"><input class="form-control" type="text" ng-model="sheet.invoiceHdr.project.projectName" readonly></span>
 			</td>
-			<td>
 				<span ng-show="!showEdit">{{sheet.invoiceHdr.invoiceNumber}}</span>
 				<span id="{{sheet.id}}" ng-show="showEdit"><input class="form-control" type="text" ng-model="sheet.invoiceHdr.invoiceNumber" readonly></span>
 			</td>
