commit for invoice list

--- a/MitosisTimesheet/src/main/webapp/html/include.html
+++ b/MitosisTimesheet/src/main/webapp/html/include.html
@@ -33,7 +33,7 @@
           <li><a ui-sref="company_info">Company Information</a></li>
           <li><a ui-sref="projectCostDetails">Project Cost </a></li>
             <li><a ui-sref="invoice">Invoice</a></li>
-          <li><a ui-sref="customer_payment">Receipt</a></li>
+          <li><a ui-sref="pendingReceipt">Receipt</a></li>
           <li><a ui-sref="bankReconcile">Bank Reconcile</a></li> 
           <li><a ui-sref="financeReport">Report</a></li>
        	  </ul>
