commit for expenses master

--- a/MitosisTimesheet/src/main/webapp/html/include.html
+++ b/MitosisTimesheet/src/main/webapp/html/include.html
@@ -35,6 +35,7 @@
             <li><a ui-sref="invoice">Invoice</a></li>
           <li><a ui-sref="pendingReceipt">Receipt</a></li>
           <li><a ui-sref="bankReconcile">Bank Reconcile</a></li> 
+         <li><a ui-sref="expenses">Expense Master</a></li> 
           <li><a ui-sref="financeReport">Report</a></li>
        	  </ul>
         </li>
