--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -86,6 +86,7 @@
      <script src="js/controllers/projectCostViewController.js"></script>
      <script src="js/controllers/lobMasterController.js"></script>
      <script src="js/controllers/pendingReceiptController.js"></script>
+     <script src="js/controllers/expensesController.js"></script>
     	
 </head>
 <body ng-app="myApp" style="background: #f2f2f2;">
